handling booleans, in enumerable, adding transformer in dbmsMeta for transformation